spacing issues fixed

--- a/assets/app.css
+++ b/assets/app.css
@@ -9,8 +9,11 @@ body{
     background: #000000;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #181717, #000000);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #302f2f, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
 }
+.navbar-brand{
+    font-size: 2rem;
+}
+
 p{
     font-family: 'Inconsolata', monospace;
 }
@@ -18,6 +21,7 @@ p{
 h1,h2{
     font-family: 'Patrick Hand', cursive;
 }
+
 
 .card{
     background: #000000;  /* fallback for old browsers */
@@ -35,6 +39,10 @@ a:hover{
     text-decoration: none;
 }
 
+.navbar-nav a{
+    font-size: 1rem;
+
+}
 
 /* Jumbotron */
 .jumbotron{
